yun-k8s-demo/k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-svc
spec:
  selector:
    app: node-server
  ports:
    - name: http-web
      port: 8080
      targetPort: 8080
